force-app/main/default/objects/Service_Airport__mdt/Service_Airport__mdt.object-meta.xml
<CustomObject>
    <label>Service Airport</label>
    <pluralLabel>Service Airports</pluralLabel>
</CustomObject>