force-app/main/default/objects/Service_Airport__mdt/fields/Airport_Id__c.field-meta.xml
<CustomField>
    <fullName>Airport_Id__c</fullName>
    <label>Airport Id</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>