force-app/main/default/objects/Service_Airport__mdt/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <label>Location Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>