force-app/main/default/objects/Service_Airport__mdt/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <label>Location Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>