force-app/main/default/objects/Service_Airport__mdt/fields/State_Id__c.field-meta.xml
<CustomField>
    <fullName>State_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Id</label>
    <type>Checkbox</type>
</CustomField>